--- a/app/src/main/res/layout/empty_checklist.xml
+++ b/app/src/main/res/layout/empty_checklist.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp">
+    android:layout_marginTop="40dp"
+    android:layout_marginBottom="40dp">
 
     <ImageView
         android:id="@+id/empty_checklist"
         android:src="@drawable/empty_checklist"
         android:layout_centerHorizontal="true"
-        android:layout_width="86dp"
-        android:layout_height="86dp" />
+        android:layout_width="82dp"
+        android:layout_height="82dp" />
 
     <TextView
         android:layout_marginTop="8dp"
