--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:drawSelectorOnTop="true"
+    app:cardCornerRadius="0sp"
+    app:cardElevation="0sp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="?android:attr/windowBackground"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/card">
 
-    <android.support.v7.widget.CardView
-        android:drawSelectorOnTop="true"
-        app:cardCornerRadius="0sp"
-        app:cardElevation="0sp"
-        android:id="@+id/card"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardBackgroundColor="?android:attr/windowBackground"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/icon"
+            tools:src="@mipmap/ic_launcher_round"
+            android:layout_width="@dimen/result_thumb_height"
+            android:layout_height="@dimen/result_thumb_width" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp">
-
-            <ImageView
-                android:id="@+id/icon"
-                tools:src="@mipmap/ic_launcher"
-                android:layout_width="56dp"
-                android:layout_height="56dp" />
+            android:id="@+id/titleLayout"
+            android:gravity="start"
+            android:paddingEnd="10dp"
+            android:paddingStart="14dp"
+            android:layout_toEndOf="@id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <TextView
+                android:gravity="center_vertical|start"
                 android:id="@+id/title"
-                android:padding="10dp"
-                android:layout_width="match_parent"
+                android:textSize="19sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/icon"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 tools:text="Eminem - Space Bound"
                 android:textIsSelectable="false" />
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
