Enabled rotation, bugfix & polishing
Enhanched thumbnail resolution, enabled rotation, added tablet specific layout, fixed TextView realign visual glitch

--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -25,6 +25,8 @@
             android:layout_height="@dimen/result_thumb_width" />
 
         <RelativeLayout
+            android:visibility="invisible"
+            tools:visibility="visible"
             android:id="@+id/titleLayout"
             android:gravity="start"
             android:paddingEnd="10dp"
