--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -89,7 +89,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/view_channel"
+        android:id="@+id/open_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -111,7 +111,44 @@
                 android:layout_height="@dimen/bottom_sheet_thumb_size"
                 android:layout_marginEnd="16dp"
                 android:tint="@color/bottomSheetIconLight"
-                app:srcCompat="@drawable/youtube_channel"/>
+                app:srcCompat="@drawable/open_video"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/Grey_200"
+                android:text="Open video"
+                android:textSize="@dimen/bottom_sheet_thumb_text_size" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/open_channel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:drawSelectorOnTop="true"
+        app:cardBackgroundColor="@color/Grey_850">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginEnd="@dimen/bottom_sheet_thumb_margin"
+            android:layout_marginStart="@dimen/bottom_sheet_thumb_margin"
+            android:padding="8dp">
+
+            <ImageView
+                android:layout_width="@dimen/bottom_sheet_thumb_size"
+                android:layout_height="@dimen/bottom_sheet_thumb_size"
+                android:layout_marginEnd="16dp"
+                android:tint="@color/bottomSheetIconLight"
+                app:srcCompat="@drawable/open_channel"/>
 
             <TextView
                 android:layout_width="wrap_content"
