Light code cleanup, removed useless images to decrease app size, updated dialogs library to alpha6, made icon round by default

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -27,7 +27,7 @@
 
             <ImageView
                 android:id="@+id/thumb_icon"
-                tools:src="@mipmap/ic_launcher"
+                tools:src="@mipmap/ic_launcher_round"
                 android:layout_width="@dimen/bottom_sheet_image_size_width"
                 android:layout_height="@dimen/bottom_sheet_image_size_height" />
 
