--- a/app/src/main/res/values/material.xml
+++ b/app/src/main/res/values/material.xml
@@ -269,6 +269,7 @@
     <color name="Grey_850">#313131</color>
     <color name="Grey_875">#252525</color>
     <color name="Grey_900">#212121</color>
+    <color name="Grey_915">#181818</color>
     <color name="Grey_925">#151515</color>
     <color name="Grey_950">#101010</color>
     <color name="Grey_1000">#000000</color>
