--- a/app/src/main/res/layout-sw600dp/activity_layout.xml
+++ b/app/src/main/res/layout-sw600dp/activity_layout.xml
@@ -22,7 +22,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/activity_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
