--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -10,7 +10,7 @@
     android:paddingEnd="20dp"
     tools:showIn="@layout/activity_layout">
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,14 +22,14 @@
 
         <EditText
             android:id="@+id/search"
-            android:inputType="textUri|textCapWords"
+            android:inputType="text|textCapSentences"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Search" />
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:paddingTop="4dp"
         android:id="@+id/resultsRecyclerView"
         tools:listitem="@layout/result_layout"
