--- a/app/src/main/res/xml/download_cache_path.xml
+++ b/app/src/main/res/xml/download_cache_path.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
     <external-path name="external_files" path="."/>
-    <files-path name="files-path" path="." /> <!-- Used to access into application data files -->
+    <files-path name="files-path" path="." />
 </paths>
