Added UI implementation for download queue, replaced icons with vector drawables

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -32,7 +32,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:paddingTop="4dp"
         android:id="@+id/resultsRecyclerView"
-        tools:listitem="@layout/result_layout"
+        tools:listitem="@layout/result_item"
         android:layout_below="@id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
