Implemented room database for checklist, fixed html escape chars in responses, naming improvements & fixes

--- a/app/src/main/res/layout/video_player_dialog.xml
+++ b/app/src/main/res/layout/video_player_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
+    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
