--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -40,7 +40,7 @@
     <include
         android:layout_below="@+id/searchLayout"
         layout="@layout/empty_view_search"
-        android:id="@+id/empty_result"
+        android:id="@+id/emptyResult"
         android:visibility="gone"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
