Added quick press actions, enlarged maximum query results to 100 items, database migration and icons improvements
Signed-off-by: Andrea Cioccarelli <cioccarelliandrea01@gmail.com>

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -22,9 +22,10 @@
 
         <EditText
             android:id="@+id/search"
-            android:inputType="text|textCapSentences"
+            android:inputType="text|textCapSentences|textNoSuggestions|textAutoCorrect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:importantForAutofill="no"
             android:hint="Search" />
 
     </com.google.android.material.textfield.TextInputLayout>
