--- a/app/src/main/res/values-sw600dp/attrs.xml
+++ b/app/src/main/res/values-sw600dp/attrs.xml
@@ -2,5 +2,5 @@
 <resources>
     <attr format="string" name="fontPath"/>
     <item name="calligraphy_tag_id" type="id"/>
-    <bool name="isTablet">false</bool>
+    <bool name="isTablet">true</bool>
 </resources>
