--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -24,6 +24,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         layout="@layout/activity_content" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
