--- a/app/src/main/res/layout/video_player_dialog.xml
+++ b/app/src/main/res/layout/video_player_dialog.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/player"
+        fontPath="sans-bold.ttf"
+        app:showFullScreenButton="false"
+        app:autoPlay="false"
+        app:showYouTubeButton="false"
+        android:textAppearance="@style/TextAppearance.FontPath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
