--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -20,7 +20,7 @@
         android:paddingEnd="4dp"
         android:layout_marginTop="60dp">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search"
             android:inputType="text|textCapSentences"
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:paddingTop="4dp"
-        android:id="@+id/resultsRecyclerView"
+        android:id="@+id/recyclerView"
         tools:listitem="@layout/result_item"
         android:layout_below="@id/searchLayout"
         android:layout_width="match_parent"
@@ -43,7 +43,7 @@
     <include
         android:layout_below="@+id/searchLayout"
         layout="@layout/empty_view_search"
-        android:id="@+id/emptyResult"
+        android:id="@+id/emptyResultImage"
         android:visibility="gone"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
