Changed font to manrope, UI smooth fixes, checklist lazy-loading, changed the result thumbnail on-click behaviour, dependency updates, fixed update package opening crash
Signed-off-by: AndreaCioccarelli <andrea.cioccarelli01@gmail.com>

--- a/app/src/main/res/layout/result_item.xml
+++ b/app/src/main/res/layout/result_item.xml
@@ -15,24 +15,35 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/icon"
-            tools:src="@mipmap/ic_launcher_round"
-            android:layout_width="@dimen/result_thumb_height"
-            android:layout_height="@dimen/result_thumb_width" />
+        <RelativeLayout
+            android:id="@+id/icon_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="0dp"
+                android:id="@+id/icon"
+                tools:src="@mipmap/ic_launcher_round"
+                android:layout_width="@dimen/result_thumb_height"
+                android:layout_height="@dimen/result_thumb_width" />
+
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:visibility="invisible"
             tools:visibility="visible"
-            android:id="@+id/titleLayout"
+            android:id="@+id/title_layout"
             android:gravity="start"
-            android:paddingEnd="10dp"
-            android:paddingStart="14dp"
+            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/icon"
+            android:layout_toEndOf="@id/icon_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -44,7 +55,7 @@
                 android:textSize="19sp"
                 android:layout_centerVertical="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                tools:text="Eminem"
+                tools:text="Eminem 313"
                 android:textIsSelectable="false" />
 
         </RelativeLayout>
