Upgraded okhttp to 4.0.1 & kotlin to 1.3.41, added compound icons on checklisted items, introduced room asynchronous operations using coroutines
Signed-off-by: AndreaCioccarelli <andrea.cioccarelli01@gmail.com>

--- a/app/src/main/res/layout/video_player_dialog.xml
+++ b/app/src/main/res/layout/video_player_dialog.xml
@@ -7,7 +7,7 @@
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/player"
-        fontPath="sans-bold.ttf"
+        fontPath="manrope-bold.ttf"
         app:showFullScreenButton="false"
         app:autoPlay="false"
         app:showYouTubeButton="true"
