--- a/app/src/main/res/layout/result_item.xml
+++ b/app/src/main/res/layout/result_item.xml
@@ -34,7 +34,6 @@
 
         </RelativeLayout>
 
-
         <RelativeLayout
             android:visibility="invisible"
             tools:visibility="visible"
@@ -55,7 +54,9 @@
                 android:textSize="19sp"
                 android:layout_centerVertical="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                tools:text="Eminem 313"
+                tools:text="Title"
+                tools:drawableRight="@drawable/badge_checklisted"
+                android:drawablePadding="8dp"
                 android:textIsSelectable="false" />
 
         </RelativeLayout>
