--- a/app/src/main/res/layout/result_item.xml
+++ b/app/src/main/res/layout/result_item.xml
@@ -15,7 +15,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="0dp">
 
         <RelativeLayout
             android:id="@+id/icon_layout"
