--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,6 @@
     </style>
 
     <style name="TextAppearance.FontPath" parent="android:TextAppearance">
-        <item name="fontPath">sans-bold.ttf</item>
+        <item name="fontPath">manrope-bold.ttf</item>
     </style>
 </resources>
